# rustrict

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  downloads.sh
.github/ISSUE_TEMPLATE/: feature-request  feature-request.md  filtering-error.md
.github/workflows/: build.yml
examples/: advanced.rs  analyze.rs  censor.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs
pages/: Cargo.toml  Trunk.prod.toml  index.html
pages/src/: main.rs
src/: banned.rs  banned_chars.txt  buffer_proxy_iterator.rs  censor.rs  char_map.rs  character_analyzer.rs  context.rs  dictionary_blacklist.txt  dictionary_blocklist.txt  dictionary_common_valid_short.txt  dictionary_extra.txt  false_positive_finder.rs  false_positives.txt  feature_cell.rs  lib.rs  mtch.rs  pii.rs  profanity.csv  radix.rs  replacement_finder.rs  replacements.csv  replacements.rs  replacements_extra.csv  safe.txt  test_broken.txt  test_negative.txt  test_positive.txt  test_safe.txt  trace.rs  trie.rs  typ.rs  unicode_fonts.csv  unicode_fonts.txt  width.rs
