[package]
name = "rustrict"
authors = ["Finn Bear"]
version = "0.2.5"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/rustrict/"
description = "rustrict is a profanity filter for Rust"
exclude = ["fuzz/"]

[lib]
name = "rustrict"
path = "src/lib.rs"

[[bin]]
name = "false_positive_finder"
path = "src/false_positive_finder.rs"
required-features = ["find_false_positives"]

[[bin]]
name = "replacement_finder"
path = "src/replacement_finder.rs"
required-features = ["find_replacements"]

[features]
default = ["context"]
context = ["strsim"]
customize = []
reset_censor = []
find_false_positives = ["regex", "indicatif", "rayon"]
find_replacements = []

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
itertools = "0.10"
unicode-normalization = "0.1"
unicode_categories = "0.1"
csv = "1.1"
rustc-hash = "1.1"
regex = {version = "1.5", optional = true}
indicatif = {version = "0.17.0-beta.1", optional = true}
rayon = {version = "1.5", optional = true}
doc-comment = "0.3.3"
strsim = {version = "0.10.0", optional = true}

[dev-dependencies]
rand = "0.8"
censor = "0.2.0"
rustrict_old = { package = "rustrict", version = "0.1" }
serial_test = "0.5"