[package]
name = "rustrict"
authors = ["Finn Bear"]
version = "0.2.13"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/rustrict/"
description = "rustrict is a profanity filter for Rust"
exclude = ["fuzz/"]

[lib]
name = "rustrict"
path = "src/lib.rs"

[[bin]]
name = "false_positive_finder"
path = "src/false_positive_finder.rs"
required-features = ["find_false_positives"]

[[bin]]
name = "replacement_finder"
path = "src/replacement_finder.rs"
required-features = ["find_replacements"]

[features]
default = ["censor", "context"]
censor = ["bitflags", "lazy_static", "itertools", "unicode-normalization", "rustc-hash"]
context = ["censor", "strsim"]
customize = ["censor"]
reset_censor = ["censor"]
find_false_positives = ["censor", "regex", "indicatif", "rayon"]
find_replacements = []

[dependencies]
unicode_categories = "0.1"
unicode-normalization = {version = "0.1", optional = true}
bitflags = {version = "1.3", optional = true}
lazy_static = {version = "1.4", optional = true}
itertools = {version = "0.10", optional = true}
rustc-hash = {version = "1.1", optional = true}
regex = {version = "1.5", optional = true}
indicatif = {version = "0.17.0-beta.1", optional = true}
rayon = {version = "1.5", optional = true}
doc-comment = "0.3.3"
strsim = {version = "0.10.0", optional = true}

[dev-dependencies]
rand = "0.8"
csv = "1.1"
censor_crate = {package = "censor", version = "0.2.0"}
rustrict_old = { package = "rustrict", version = "0.1" }
serial_test = "0.5"